--- a/code/chap05soln.ipynb
+++ b/code/chap05soln.ipynb
@@ -231,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tc = 3      # time between contacts in days \n",
@@ -586,7 +588,7 @@
     "    \"\"\"\n",
     "    plot(S, '--', color='blue', label='Susceptible')\n",
     "    plot(I, '-', color='red', label='Infected')\n",
-    "    plot(R, ':', color='green', label='Resistant')\n",
+    "    plot(R, ':', color='green', label='Recovered')\n",
     "    decorate(xlabel='Time (days)',\n",
     "             ylabel='Fraction of population')"
    ]
@@ -1279,7 +1281,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "immunize_array = linspace(0, 1, 21)\n",
@@ -1633,7 +1637,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spending_array = linspace(0, 1200, 20)\n",
@@ -1821,7 +1827,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "infected_sweep = sweep_doses(dose_array)"
